# basecontainer

./: HOSTBOOTSTRAP_REFACTOR_PLAN.md  README.md  pyproject.toml
docker/: basecontainer.Dockerfile
documents/: README.md  documentation_standards.md
documents/engineering/: base_image.md  build_release.md  gitignore_guardrails.md  harbor.md  prerequisites.md  schema.md  testing.md
documents/languages/: cluster_tooling.md  cpp.md  cuda.md  go.md  haskell.md  node.md  playwright.md  purescript.md  python.md  rust.md
hostbootstrap/: base_image.py  check_code.py  cli.py  dhall_tool.py  docker_ops.py  harbor.py  prereqs.py  process.py  spec.py  substrate.py  test_all.py  units.py
hostbootstrap/models/: __init__.py  container.py  host_binary.py  host_daemon.py  multi_substrate.py  outer_container.py
tests/: conftest.py  test_base_image.py  test_cli.py  test_dhall_tool.py  test_docker_ops.py  test_models.py  test_spec.py  test_spec_dhall.py  test_substrate.py  test_units.py
tests/fixtures/dhall/invalid/: bad_flavor.dhall  daemon_on_container.dhall  missing_daemon.dhall  mounts_on_host_binary.dhall
tests/fixtures/dhall/valid/: container.dhall  host_binary.dhall  host_daemon.dhall  mixed.dhall  service_container.dhall
