[build-system]
requires = ["poetry-core>=1.9.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hostbootstrap"
version = "0.1.0"
description = "Host bootstrap CLI for the basecontainer base images"
authors = ["hostbootstrap contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hostbootstrap" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
click = ">=8.1,<9.0"
httpx = ">=0.27,<1.0"
pyyaml = ">=6.0,<7.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5,<1.0"
black = ">=24.0,<26.0"
mypy = ">=1.10,<2.0"
types-PyYAML = ">=6.0,<7.0"

[tool.poetry.scripts]
hostbootstrap = "hostbootstrap.cli:main"
check-code = "hostbootstrap.check_code:main"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["hostbootstrap", "stubs"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PL", "PERF", "TID",
]
ignore = [
    "E501",      # handled by black
    "PLR0913",   # too many arguments — common in CLI argument-builders
    "PLR2004",   # magic value — fine in tightly scoped helpers
]

[tool.ruff.lint.per-file-ignores]
"hostbootstrap/cli.py" = ["PLR0915"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_any_explicit = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
mypy_path = "stubs"
files = ["hostbootstrap"]
